[package]
name = "spider-dance"
version = "0.1.0"
authors = ["gamma-delta"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
anyhow = "1.0.38"
serde_json = "1.0.62"
json_comments = "0.2.0"
schemars = "0.8.0"
unicode-width = "0.1.5"
clap = "2.33.3"
structopt = "0.3.21"
